# howmany

./: .gitignore  Cargo.toml  LICENSE  README.md  features.md  howmany-report.html  rebuild.sh
.github/workflows/: ci.yml  release.yml
data/: categories.json
data/languages/cpp/: frameworks.json  technologies.json
data/languages/csharp/: frameworks.json
data/languages/css/: frameworks.json
data/languages/docker/: tools.json
data/languages/go/: frameworks.json
data/languages/haskell/: frameworks.json
data/languages/html/: frameworks.json
data/languages/java/: frameworks.json
data/languages/javascript/: frameworks.json  technologies.json
data/languages/python/: frameworks.json  technologies.json
data/languages/rust/: frameworks.json  technologies.json
data/languages/shell/: frameworks.json
data/languages/sql/: frameworks.json
data/languages/swift/: frameworks.json
deployment/: howmany.rb
src/: lib.rs  main.rs
src/cli/: mod.rs
src/core/: mod.rs  types.rs
src/core/counter/: mod.rs
src/core/detector/: mod.rs
src/core/detector/patterns/: clojure.rs  cpp.rs  dart.rs  dotnet.rs  elixir.rs  erlang.rs  general.rs  go.rs  haskell.rs  java.rs  julia.rs  kotlin.rs  lua.rs  matlab.rs  mod.rs  nodejs.rs  perl.rs  php.rs  python.rs  r.rs  ruby.rs  rust.rs  swift.rs  web.rs  zig.rs
src/core/filters/: mod.rs
src/core/patterns/: mod.rs
src/core/stats/: aggregation.rs  basic.rs  complexity.rs  formatting.rs  mod.rs  ratios.rs  time.rs  visualization.rs
src/core/stats/aggregation/: aggregator.rs  merging.rs  mod.rs  types.rs
src/core/stats/complexity/: analyzer.rs  calculator.rs  mod.rs  quality.rs  types.rs
src/core/stats/complexity/languages/: clojure.rs  cpp.rs  csharp.rs  dart.rs  elixir.rs  erlang.rs  go.rs  haskell.rs  java.rs  javascript.rs  julia.rs  kotlin.rs  lua.rs  matlab.rs  mod.rs  perl.rs  php.rs  python.rs  r.rs  ruby.rs  rust.rs  swift.rs  zig.rs
src/core/stats/ratios/: calculator.rs  insights.rs  manager.rs  mod.rs  quality.rs  types.rs
src/core/stats/techstack/: analysis.rs  detection.rs  insights.rs  loader.rs  mapping.rs  mod.rs  patterns.rs
src/counter/: mod.rs
src/detector/: mod.rs
src/interactive/: mod.rs
src/testing/: mod.rs  test_utils.rs
src/ui/: filters.rs  mod.rs
src/ui/cli/: mod.rs
src/ui/html/: insights.rs  mod.rs  reporter.rs  standard_report.rs  templates.rs  time_utils.rs  time_wasted_report.rs  utils.rs
src/ui/interactive/: app.rs  charts.rs  display.rs  legacy.rs  mod.rs  rendering.rs  utils.rs
src/ui/sarif/: converter.rs  mod.rs  reporter.rs  tests.rs
src/utils/: cache.rs  config.rs  errors.rs  metrics.rs  mod.rs  progress.rs
