[package]
name = "howmany"
version = "0.2.0"
edition = "2021"
authors = ["Griffin <griffin@griffin-code.com>"]
description = "A blazingly fast, intelligent code analysis tool with parallel processing, caching, and beautiful visualizations"
license = "GRIFFIN"
readme = "README.md"
homepage = "https://github.com/GriffinCanCode/howmany"
repository = "https://github.com/GriffinCanCode/howmany"
keywords = ["code-analysis", "line-counter", "cloc", "tokei", "statistics"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
crossterm = "0.27"
tui = "0.19"
unicode-width = "0.1"
console = "0.15"
indicatif = "0.17"
comfy-table = "7.0"
colored = "2.0"
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "howmany"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true 