[package]
name = "howmany"
version = "0.3.0"
edition = "2021"
authors = ["Griffin <griffin@griffin-code.com>"]
description = "A blazingly fast, intelligent code analysis tool with parallel processing, caching, and beautiful visualizations"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/GriffinCanCode/howmany"
repository = "https://github.com/GriffinCanCode/howmany"
keywords = ["code-analysis", "line-counter", "cloc", "tokei", "statistics"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ignore = "0.4"
# Modern TUI and terminal libraries
ratatui = "0.29"
crossterm = "0.29"
# Modern color and styling
owo-colors = "4.0"
# Better progress indicators
indicatif = "0.17"
# Enhanced table formatting
tabled = "0.16"
# Async runtime for better performance
tokio = { version = "1.0", features = ["full"] }
# Core utilities
rayon = "1.8"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
dirs = "5.0"
# Modern terminal utilities
console = "0.15"
unicode-width = "0.1"
chrono = { version = "0.4", features = ["serde"] }
# Performance optimizations
ahash = { version = "0.8", features = ["serde"] }
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "howmany"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true 