[package]
name = "howmany"
version = "0.3.3"
edition = "2021"
authors = ["Griffin <griffin@griffin-code.com>"]
description = "A blazingly fast, intelligent code analysis tool with parallel processing, caching, and beautiful visualizations"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/GriffinCanCode/howmany"
repository = "https://github.com/GriffinCanCode/howmany"
keywords = ["code-analysis", "line-counter", "cloc", "tokei", "statistics"]
categories = ["command-line-utilities", "development-tools", "text-processing"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
rayon = "1.7"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"
crossterm = "0.29"
ratatui = "0.29"
once_cell = "1.19"
askama = "0.12"
thiserror = "1.0"
ignore = "0.4"
indicatif = "0.17"
console = "0.15"
toml = "0.8"
lazy_static = "1.4"
dirs = "5.0"
owo-colors = "4.0"
tokio = { version = "1.0", features = ["full"] }
serde-sarif = "0.8"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
mockall = "0.12"
serial_test = "3.0"

[[bin]]
name = "howmany"
path = "src/main.rs"



[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true 
